@@ -7,6 +7,7 @@ no Front-Cover Texts, and no Back-Cover Texts. A copy of the license is included
 in the sources of this package and additionally can be obtained from Internet
 <https://www.gnu.org/licenses>.
 
+* [2017-11-22] RFC4880: added V3 signature packets for PacketDecode()
 * [2017-11-19] aiounicast: increase timeout of Send() for OpenBSD
 * [2017-11-18] release 1.3.5 of LibTMCG
 * [2017-11-18] RFC4880: fixes a bad return value in AsymmetricDecryptElgamal()
